--- a/README
+++ b/README
@@ -1,8 +1,7 @@
 pcaspy
 =======
 
-pcaspy_ is a Portable Channel Access Server Python Binding. 
-And it provides an easy API to create PCAS application in Python.
+PCASpy provides not only the low level python binding to EPICS Portable Channel Access Server but also the necessary high level abstraction to ease the server tool programming.
 
 Prerequisites
 --------------
@@ -14,6 +13,4 @@ Prerequisites
 Build
 ---------------------
   * python setup.py build
-
-To build the current development, clone the project, 
-  $ hg clone http://code.google.com/p/pcaspy/ pcaspy
+  * [sudo] python setup.py install
