update change log

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 0.3 (xx-xx-2011)
     * Added casPV's writeNotify method for EPICS base 3.14.11+
+    * Release GIL for each C function call
 
 0.2 (16-08-2011)
     * Added Python 3 support
