license type changed

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
-0.3 (21-10-2011)
+0.4 (XX-XX-2011)
+    * Change from GPL to New BSD License for broader audience.
+
+0.3 (21-09-2011)
     * Fixed gdd vector memory leak introduced in 0.2
     * Added casPV's writeNotify method for EPICS base 3.14.11+
     * Release GIL for each C function call
