--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.4.1 (XX-XX-2013)
+    * Fixed PV initial status. By startup, it is UDF/INVALID.
+
 0.4 (14-01-2013)
     * Change from GPL to New BSD License for broader audience.
     * Added __version__ info
