--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 0.5.0 (01-10-2014)
+    * Fixed that put callback may fail if driver invokes `callbackPV` too soon.
     * Added 16bit short integer type.
     * Added printout of exceptions that are raised inside Python code.
     * Added basic logging support. To enable console logging::
