--- a/CHANGES
+++ b/CHANGES
@@ -7,11 +7,11 @@
 
         logging.basicConfig(level=logging.DEBUG, format='%(asctime)s - %(levelname)s - %(name)s: %(message)s')
 
-    * Changed so that timestamp is updated whenever Driver.setParam is calledc.
+    * Changed so that timestamp is updated whenever Driver.setParam is called.
       It was only updated when the values are new. The new behavior is the same as EPICS IOC.
     * Packaging changes:
         * Binary packages are distributed through PyPI.
-        * Document is hosted at https://pcaspy.readthedocs.org
+        * Document is hosted at https://pythonhosted.org/pcaspy
 
 0.4.1 (23-04-2013)
     * Fixed PV initial status. By startup, it is UDF/INVALID.
@@ -36,8 +36,11 @@
         The timestamp is set at each setParam call with new value different to current value.
     
     * Added alarm/severity info.
-        For "enum" type PV, the severity is configued by its "state" field. It is a list of severity states, which can be NO_ALARM, MINOR_ALARM, MAJOR_ALARM, INVALID_ALARM. If current state's severity is other than NO_ALARM, alarm is STATE_ALARM.
-        For "int" or "float" type PV, the alarm state is configured by its "low","high","lolo","hihi" fields, in analogue to EPICS database. 
+        For "enum" type PV, the severity is configued by its "state" field.
+        It is a list of severity states, which can be NO_ALARM, MINOR_ALARM, MAJOR_ALARM, INVALID_ALARM.
+        If current state's severity is other than NO_ALARM, alarm is STATE_ALARM.
+        For "int" or "float" type PV, the alarm state is configured by its "low","high","lolo","hihi" fields,
+        in analogue to EPICS database.
         example/alarm_severity provides an example.
 
 0.3 (21-09-2011)
