--- a/README
+++ b/README
@@ -4,4 +4,4 @@ pcaspy
 PCASpy provides not only the low level python binding to EPICS Portable Channel Access Server
 but also the necessary high level abstraction to ease the server tool programming.
 
-Check out `PCASpy documents <https://pcaspy.readthedocs.org>` to get started.
+Check out `PCASpy documents <https://pcaspy.readthedocs.org>`_ to get started.
