--- a/README
+++ b/README
@@ -1,7 +1,13 @@
-pcaspy
-=======
+PCASpy
+======
 
 PCASpy provides not only the low level python binding to EPICS Portable Channel Access Server
 but also the necessary high level abstraction to ease the server tool programming.
 
 Check out `PCASpy documents <https://pcaspy.readthedocs.org>`_ to get started.
+
+* Home: https://code.google.com/p/pcaspy
+* Documents: https://pcaspy.readthedocs.org
+* Downloads: https://pypi.python.org/pypi/pcaspy
+* Source Repo: https://code.google.com/p/pcaspy/source
+* Issue Tracker: https://code.google.com/p/pcaspy/issues/list.
